FIX: Spinner hidden in jump field.

--- a/scss/components/_paging.scss
+++ b/scss/components/_paging.scss
@@ -77,6 +77,12 @@
             text-align: center;
             width: 80px !important;
 
+            -moz-appearance:textfield;
+            &::-webkit-outer-spin-button,
+            &::-webkit-inner-spin-button {
+                -webkit-appearance: none;
+            }
+
             @include media-tablet-portrait() {
                 display: inline-block;
                 vertical-align: middle;
